# vinor

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
vinor/: helpers.py
vinor/generator/templates/standard/: .env.mysql  .env.sample  .gitignore  Makefile  README.md  pyfolio.db  pyproject.toml  requirements.txt
vinor/generator/templates/standard/standard/: dependencies.py  main.py  middlewares.py
vinor/generator/templates/standard/standard/apps/console/: cli.py
vinor/generator/templates/standard/standard/apps/mailer/: config.py  mailer.py  utils.py
vinor/generator/templates/standard/standard/configs/: app.py
vinor/generator/templates/standard/standard/models/: category.py  db.py  file.py  post.py  setting.py  subscription.py
vinor/generator/templates/standard/standard/repositories/: base_repository.py  category_repository.py  file_repository.py  post_repository.py  setting_repository.py  subscription_repository.py
vinor/generator/templates/standard/standard/responses/: pagination_response.py
vinor/generator/templates/standard/standard/routers/v1/: categories_route.py  files_route.py  posts_route.py  root_route.py  router_v1.py  settings_route.py  subscriptions_route.py
vinor/generator/templates/standard/standard/schemas/: base_response_schema.py  category_schema.py  file_schema.py  post_schema.py  setting_schema.py  subscription_schema.py
vinor/generator/templates/standard/standard/services/: image_service.py  mail_service.py  storage_service.py
vinor/generator/templates/standard/standard/tests/: helper.py
(+37 files in other folders)
