[tool.poetry]
name = "vinor"
version = "1.0.0"
description = ""
authors = ["VinorTeam <opensource@vinor.io>"]
readme = "README.md"

[tool.poetry.scripts]
vinor = 'vinor.commands.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-schema = "^0.1.1"
requests = "^2.28.1"
flake8 = "^5.0.4"
faker = "^15.1.1"
click = "^8.1.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
jinja2 = "^3.1.2"
htmlmin = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
